<resources>

    <!-- general -->
    <string name="app_name">SPEED CLICKING</string>
    <string name="app_name_local">SPEED CLICKING</string>

    <!-- Main Activity -->
    <string name="github" translatable="false">&#xf09b;</string>
    <string name="play" translatable="false">&#xf11b;</string>
    <string name="trophy" translatable="false">&#xf091;</string>
    <string name="settings" translatable="false">&#xf013;</string>
    <string name="rate" translatable="false">&#xf005;</string>

    <!-- Time Activity -->
    <string name="ten_seconds_button">10 SECONDS</string>
    <string name="thirty_seconds_button">30 SECONDS</string>
    <string name="sixty_seconds_button">60 SECONDS</string>

    <!-- Play Activity -->
    <string name="new_high_score">NEW HIGH SCORE!!!</string>
    <string name="score" translatable="false">0</string>

    <string name="sign_in_other_error" translatable="false">There was an issue with sign-in, please try again later.</string>
    <string name="sign_in_failed" translatable="false">Failed to sign in. Please check your network connection and try again.</string>
    <string name="app_misconfigured" translatable="false">The application is incorrectly configured. Check that the package name and signing certificate match the client ID created in Developer Console. Also, if the application is not yet published, check that the account you are trying to sign in with is listed as a tester account. See logs for more information.</string>
    <string name="license_failed" translatable="false">License check failed.</string>
    <string name="unknown_error" translatable="false">Unknown error.</string>
    <string name="signin_other_error" translatable="false">There was an issue with sign in.  Please try again later.</string>

</resources>
