<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/time_activity_body"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="games.onestar.speedclicking.ui.activities.TimeActivity">

    <com.google.android.gms.ads.AdView
        android:id="@+id/timeAdView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="@string/banner_ad_unit_id"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/tenSecButton"
        style="@style/menu_button"
        android:text="@string/ten_seconds_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/thirtySecButton" />

    <Button
        android:id="@+id/thirtySecButton"
        style="@style/menu_button"
        android:text="@string/thirty_seconds_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="parent" />

    <Button
        android:id="@+id/sixtySecButton"
        style="@style/menu_button"
        android:text="@string/sixty_seconds_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/thirtySecButton" />

</android.support.constraint.ConstraintLayout>
